--- a/estilos.css
+++ b/estilos.css
@@ -94,3 +94,10 @@ h1 {
   border-width: 8px 0 8px 16px;
   border-color: transparent transparent transparent #F45B69;
 }
+
+.fotoPortada img {
+  position: relative;
+  display: flex;
+  text-align: center;
+  align-content: center;
+}
