--- a/estilos.css
+++ b/estilos.css
@@ -101,3 +101,13 @@ h1 {
   text-align: center;
   align-content: center;
 }
+
+.portada{
+  width: 40%;
+  margin-left: 30%;
+  background-color: aqua;
+}
+
+.portada img{
+  width: 100%;
+}
